OPENEJB-1986 encoding uri
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb@1431091 13f79535-47bb-0310-9956-ffa450edef68